[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Pause Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.156863, 0.141176, 0.054902, 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -617.0
margin_top = -379.0
margin_right = 617.0
margin_bottom = 379.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 101.0
text = "Pause"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -356.0
margin_top = -104.0
margin_right = 356.0
margin_bottom = 200.0
custom_constants/separation = 50

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 712.0
margin_bottom = 68.0
focus_neighbour_left = NodePath("../QuiToDesktopButton")
focus_neighbour_top = NodePath("../QuiToDesktopButton")
focus_neighbour_right = NodePath("../QuitToMainMenuButton")
focus_neighbour_bottom = NodePath("../QuitToMainMenuButton")
focus_next = NodePath("../QuitToMainMenuButton")
focus_previous = NodePath("../QuiToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="QuitToMainMenuButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 712.0
margin_bottom = 186.0
focus_neighbour_left = NodePath("../ResumeButton")
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_right = NodePath("../QuiToDesktopButton")
focus_neighbour_bottom = NodePath("../QuiToDesktopButton")
focus_next = NodePath("../QuiToDesktopButton")
focus_previous = NodePath("../ResumeButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit to Main Menu"

[node name="QuiToDesktopButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 236.0
margin_right = 712.0
margin_bottom = 304.0
focus_neighbour_left = NodePath("../QuitToMainMenuButton")
focus_neighbour_top = NodePath("../QuitToMainMenuButton")
focus_neighbour_right = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../QuitToMainMenuButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit to Desktop"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuiToDesktopButton" to="." method="_on_QuiToDesktopButton_pressed"]
